--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700');
+@import url('https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700');
 @import './styles/variables.scss';
 @import './styles/toastr.scss';
 @import './styles/button.scss';
@@ -57,8 +57,12 @@ h1, h2, h3, h4, h5, h6 {
     cursor: pointer;
 }
 
-.gap-5 {
-    gap: 5px;
+.gap-0 { 
+    gap: 0;
+}
+
+.gap-5 { 
+    gap: 5px !important; // Bootstrap already has a gap-5 class
 }
 
 .gap-10 {
