--- a/frontend/src/styles/modal.scss
+++ b/frontend/src/styles/modal.scss
@@ -35,8 +35,8 @@
     border: none;
     
     button {
-      width: 150px;
-      height: 60px;
+      min-width: 150px;
+      min-height: 60px;
       font-size: 24px;
     }
   }
